updated readme, fixed issues with 2x scaling on the nav bar

--- a/src/renderer/styles/general.css
+++ b/src/renderer/styles/general.css
@@ -119,6 +119,7 @@ body {
     flex: 1 1 fit-content;
     flex-flow: row nowrap;
     column-gap: var(--ctarea-cgap);
+    min-height: 0;
 }
 
 #overlay-confirmation {
