--- a/src/renderer/styles/editor-section.css
+++ b/src/renderer/styles/editor-section.css
@@ -105,7 +105,7 @@
     border-bottom-left-radius: inherit;
     display: flex;
     flex: 0 0 fit-content;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     padding-top: var(--mbar-tpadding);
     padding-bottom: var(--mbar-bpadding);
 
